More ThreadLocalRandom usage